--- a/index.css
+++ b/index.css
@@ -1,33 +1,27 @@
 
-body {
 
-}
-
-</sundaycollect>
-    
     @font-face {
     font-family: 'Basel-Book.woff';
-    src: url('fonts/Basel-Book.woff') format('woff');
+    src: url('./fonts/Basel-Book.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     }
 
-}
+
 
 h1 {
-    font-family: 'Basel-Book.woff'; 
-    color:   #black;
+    font-family: 'Basel-Book.woff';
+    color:   black;
     font-size: 20px;
     padding-left: 20px;
     }
 
 p {
-    font-family: sans-serif; 
-    color:   #green;
+    font-family: sans-serif;
+    color:   black;
     font-size: 20px;
     padding-left: 10px;
 
     }
 
-} 
 
